templates/changesets-vpc-subnets-sgdesc-update.yaml
Parameters:
  TagNameDept:
    Description: Enter Tag name Department
    Type: String
  MyInstanceParamDetails:
    Type: String
    Default: t3.micro
    AllowedValues: 
      - t3.micro
      - t3.medium
      - t3.large
    Description: Ec2 Instance Input Parameters
  KeyPairParam:
    Description: Select KeyPair for SSH Access
    Type: AWS::EC2::KeyPair::KeyName  
  VId:
    Description: Enter VPC Id
    Type: AWS::EC2::VPC::Id
  SbId:
    Description: Enter Subnet Id
    Type: AWS::EC2::Subnet::Id
Mappings:
  MyRegionMap:
    ap-south-1:
      AMI: ami-02913db388613c3e1
    ap-southeast-1:
      AMI: ami-048a01c78f7bae4aa
    ap-southeast-2:
      AMI: ami-03ed5bd63ba378bd8
    ap-northeast-1:
      AMI: ami-0ab3e16f9c414dee7
    ap-east-1:
      AMI: ami-d3e992a2
Resources:
  Ec2Instance: # Logical Id 
    Type: AWS::EC2::Instance
    Metadata: 
      AWS::CloudFormation::Init:
        config:
#          packages:
#            yum:
#              httpd: []
#              php: []
          files:
            /var/www/html/index.php:
              content: 
                !Sub |
                  <?php print "Hello Everyone! My First Cloud Formation Web Application!"; ?>
          services:
            sysvinit:
              httpd:
                enabled: true
                ensureRunning: true
    Properties:
      InstanceType:
        Ref: MyInstanceParamDetails
      ImageId:  # Demo of Mappings
        Fn::FindInMap:
        - MyRegionMap
        - !Ref AWS::Region
        - AMI
      Tags: # PseudoParameters - !Ref AWS::Region / !Ref AWS::StackName
        - 
          Key: Name
          Value: !Join 
            - " "
            - - Ec2 Instance is created in 
              - !Ref AWS::Region
        - 
          Key: Department
          Value: !Ref TagNameDept
      KeyName: !Ref KeyPairParam
      UserData:
        Fn::Base64:
          !Sub | 
            #! /bin/bash/ -xe
            # Update the latest AWS CFN Bootstrap
            yum install -y aws-cfn-bootstrap
            # Install the files and packages from the metadata
            /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource Ec2Instance --region ${AWS::Region}
            # As metadata section to install httpd and php is not working. Hence, using bash script approach to install it.
            yum install -y httpd
            service httpd start
            yum install -y php
# Commented this SecurityGroups section, due to the error "The parameter groupName cannot be used with the parameter subnet". This can be fixed by commenting SecurityGroups Section. And adding new section SecurityGroupIds. 
#      SecurityGroups: 
#        - !Ref MyInstanceSG # Reference to Security Group. CF Template recognises this reference and invokes Line 13 for Security Group Creation first, followed by EC2 Instance Creation
      SecurityGroupIds:
        - !Ref MyInstanceSG        
      SubnetId: !Ref SbId
  MyInstanceSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Open Http Access port 80 Only
      VpcId: !Ref VId
      SecurityGroupIngress: 
        -
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        -
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: ::/0
Outputs:
  WebsiteInfo:
    Description: Public DNS Information for my Web Application
    Value: !Sub 'http://${Ec2Instance.PublicDnsName}'
